2014-06-25  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/microblaze/nptl/bits/pthreadtypes.h:
	Moved ...
	* sysdeps/microblaze/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/microblaze/nptl/bits/semaphore.h: Moved ...
	* sysdeps/microblaze/nptl/bits/semaphore.h: ... here.

	* sysdeps/microblaze/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/microblaze/nptl/createthread.c: File removed.

	* sysdeps/unix/sysv/linux/microblaze/arch-fork.h: New file.
	* sysdeps/unix/sysv/linux/microblaze/nptl/fork.c: File removed.

2014-06-25  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/dl-opendir.c (__ASSUME_O_CLOEXEC): Do
	not undefine and redefine.
	* sysdeps/unix/sysv/linux/getsysstats.c (__get_nprocs)
	[O_CLOEXEC]: Make code unconditional.
	(__get_nprocs) [!O_CLOEXEC]: Remove conditional code.
	* sysdeps/unix/sysv/linux/shm_open.c: Do not include
	<kernel-features.h>.
	[O_CLOEXEC && !__ASSUME_O_CLOEXEC] (have_o_cloexec): Remove
	conditional variable definition.
	(shm_open) [O_CLOEXEC]: Make code unconditional.
	(shm_open) [!O_CLOEXEC || !__ASSUME_O_CLOEXEC]: Remove conditional
	code.

	* configure.ac (USE_REGPARMS): Don't define here.
	* configure: Regenerated.
	* sysdeps/i386/configure.ac (USE_REGPARMS): Define here.
	* sysdeps/i386/configure: Regenerated.

	* nptl/createthread.c: Don't include kernel-features.h.
	* nptl/pthread_cancel.c: Likewise.
	* nptl/pthread_condattr_setclock.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/pt-raise.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/pthread_getcpuclockid.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/pthread_kill.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/pthread_sigqueue.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/raise.c: Likewise.
	* nptl/sysdeps/unix/sysv/linux/s390/s390-32/pt-vfork.S: Likewise.
	* nptl/sysdeps/unix/sysv/linux/s390/s390-32/vfork.S: Likewise.
	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/pt-vfork.S: Likewise.